<resources>
    <string name="app_name">HealthTrack</string>
    <string name="password">Contraseña</string>
    <string name="or">ó</string>
    <string name="ingresar">Ingresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No hay datos</string>
    <string name="reintentar">Reintentar</string>
    <string name="title_placeholder">Soy un titulo</string>
    <string name="subtitle_placeholder">Soy un subtitulo</string>
    <string name="nombre_conductor_placeholder">Nombre conductor</string>
    <string name="cellphone_placeholder">999999999</string>
    <string name="mis_vehiculos">Mis vehiculos</string>
    <string name="conductores">Conductores</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo">Correo</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cellphone">Celular</string>
    <string name="dni">DNI</string>
    <string name="address">Dirección</string>
    <string name="edit_password">Editar contraseña</string>
    <string name="ingrese_su_contrase_a_actual">Ingrese su contraseña actual</string>
    <string name="validar_contrase_a">Validar contraseña</string>
    <string name="titulo">Titulo</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="registrar">Registrar</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="contrase_a_1_mayusc_1_minusc_y_1_n_mero">Contraseña (1 Mayusc, 1 Minusc y 1 Número)</string>
    <string name="placeholder_reset_password_email">Ingrese su dirección de correo y DNI.\n\nSe le enviará un mensaje para poder recuperar su contraseña.</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="componentes">Componentes</string>
    <string name="registro_del_conductor">Registro de conductor</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="cantidad_de_asientos">Cantidad de asientos</string>
    <string name="a_o">Año</string>
    <string name="tipo_de_combustible">Tipo de combustible</string>
    <string name="registro_de_veh_culo">Registro de vehículo</string>
    <string name="nombre_componente">Nombre componente</string>
    <string name="rfid_code">Rfid Code</string>
    <string name="nombre_del_componente">Nombre del componente</string>
    <string name="codigo_rfid">Codigo RFID</string>
    <string name="registro_de_componente">Registro de componente</string>
    <string name="vehiculo">Vehículo</string>
    <string name="car_details_placeholder">Marca modelo | placa</string>
    <string name="detalles_del_componente">Detalles del componente</string>
    <string name="valor_placeholder">Valor placeholder</string>
    <string name="date_placeholder">0000/00/00 - 0000/00/00</string>
    <string name="conductor">Conductor</string>
    <string name="historial_de_conductores">Historial de conductores</string>
    <string name="conductor_asignado">Conductor asignado</string>
    <string name="conductor_no_asignado">Conductor no asignado</string>
    <string name="asignar_conductor">Asignar conductor</string>
    <string name="fecha_de_prestamo">Fecha de prestamo</string>
    <string name="tiempo_de_prestamo">Tiempo de prestamo</string>
    <string name="dias">Días</string>
    <string name="ubicacion_en_tiempo_real">· Ubicación en tiempo real</string>
    <string name="dni_placeholder">00000000</string>
    <string name="direccion">Direccion</string>
    <string name="notificaci_n">Notificación</string>
    <string name="pieza_activada">Pieza activada</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fecha_y_hora">Fecha y hora</string>
    <string name="fecha_y_hora_placeholder">0000/00/00 · 00:00:00</string>
    <string name="default_notification_channel_id">Notificación</string>
    <string name="estado">Estado</string>
    <string name="pieza_afectada">Pieza afectada</string>
    <string name="estado_de_ubicaci_n">ESTADO DE UBICACIÓN</string>
    <string name="estado_reportado_en_notificaci_n">Estado reportado en notificación</string>
    <string name="componente">Componente</string>
    <string name="estado_actual">Estado actual</string>
    <string name="reportes">Reportes</string>
    <string name="conducta">Conducta</string>
    <string name="ubicaciones_recurrentes">Ubicaciones Recurrentes</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="especialista">Especialista</string>
    <string name="usuario_responsable">Usuario Responsable</string>
    <string name="edad">Edad</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="establecer_meta">Establecer meta</string>
    <string name="meta_pasos">Meta pasos</string>
    <string name="no_definida">No definida</string>
    <string name="pasos_placeholder">000 Pasos</string>
    <string name="historial">Historial</string>
    <string name="actualizar_pasos">Actualizar pasos</string>
    <string name="guardar_pasos">Guardar pasos</string>
    <string name="_000_metros">000 metros</string>
    <string name="_000_calorias">000 calorias</string>
    <string name="_000_bpm">000 Bpm</string>
    <string name="paciente">Paciente</string>
    <string name="mis_pacientes">Mis pacientes</string>
    <string name="seleccione_un_usuario">Seleccione un usuario</string>
    <string name="nombre_de_la_clinica">Nombre de la clinica</string>
    <string name="ambiente_de_cuidados">Ambiente de cuidados</string>
    <string name="ambiente">Ambiente</string>
    <string name="avance_de_la_enfermedad">Avance de la enfermedad</string>
    <string name="descripcion">Descripcion</string>
    <string name="recomendaci_n">Recomendación</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="intensidad">Intensidad</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="actual">Actual</string>
    <string name="agregar_nueva_conducta">Agregar nueva conducta</string>
    <string name="salud">Salud</string>
    <string name="numero_del_ambiente">Número del ambiente</string>
    <string name="nombre_del_paciente">Nombre del paciente</string>
    <string name="grado_de_la_enfermedad">Grado de la enfermedad</string>
    <string name="agregar_nuevo_ambiente">Agregar nuevo ambiente</string>
    <string name="categoria">Categoría</string>
    <string name="categoria_de_avance_de_la_enfermedad">Categoría de avance de la enfermedad</string>
    <string name="descripcion_del_tratamiento">Descripción del tratamiento</string>
    <string name="agregar_nuevo_tratamiento">Agregar nuevo tratamiento</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="recomendacion">Recomendación</string>
    <string name="minimo">Mínimo</string>
    <string name="maximo">Máximo</string>
    <string name="infrecuente">Infrecuente</string>
    <string name="frecuente">Frecuente</string>
    <string name="_0_percent">0%</string>
    <string name="_000_tiempo">000 tiempo</string>
    <string name="_000_kilos">000 Kilos</string>
    <string name="sin_datos">Sin datos</string>
    <string name="pasos">Pasos</string>
    <string name="distancia">Distancia</string>
    <string name="calorias">Calorías</string>
    <string name="latidos_por_minuto">Latidos por minuto</string>
    <string name="sueno">Sueño</string>
    <string name="spo2">SpO2</string>
    <string name="reporte_pasos_dados">Reporte pasos dados</string>
    <string name="reporte_calor_as_quemadas">Reporte calorías quemadas</string>
    <string name="pulso">Pulso</string>
    <string name="historial_del_peso">Historial del peso</string>
    <string name="sinc_ubicaci_n">Sinc. Ubicación</string>
    <string name="especialistas_asignados">Especialistas asignados</string>
</resources>