<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.ResetPasswordInAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/topRoundView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="-100dp"
            android:layout_marginEnd="-100dp"
            android:background="@drawable/arc"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/big_margin"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView" />

        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/edit_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backAppCompatImageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backAppCompatImageButton"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_close"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_margin"
        android:layout_marginTop="@dimen/big_big_big_margin"
        android:layout_marginEnd="@dimen/big_big_margin"
        android:gravity="center_horizontal"
        android:text="@string/ingrese_su_contrase_a_actual"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarConstraintLayout" />

    <com.libizo.CustomEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cambiarPasswordCardView"
        app:libIZO_setBackgroundColor="@android:color/white"
        app:libIZO_setBorderColor="@android:color/darker_gray"
        app:libIZO_setBorderView="true"
        app:libIZO_setCornerRadius="@dimen/default_margin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cambiarPasswordCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <ProgressBar
            android:id="@+id/cambiarPasswordProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cambiarPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/validar_contrase_a"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>